Resolved some spacing issue

--- a/openlibrary/src/styles/App.scss
+++ b/openlibrary/src/styles/App.scss
@@ -7,7 +7,6 @@
   margin-bottom: 20px;
   padding: $spacing-04;
   padding-bottom: 60%;
-  font-weight: 900;
 }
 
 .SearchBar {
@@ -15,9 +14,6 @@
   justify-content: flex-start;
   margin-bottom: $spacing-04;
   margin-top: $spacing-07;
-  text-align: left;
-  align-items: center;
-  font-size: larger;
 }
 
 .SearchBar__input {
